--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Argon FREE React Native",
+    "name": "Guri Viajes",
     "slug": "argon-free-react-native",
     "privacy": "public",
     "sdkVersion": "34.0.0",
