--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "eject": "expo eject"
+    "eject": "expo eject", 
+     "clean": "react-native-clean-project"
+
+    
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-clean-project": "^3.2.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-navigation": "^3.11.0"
