--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.1.0",
     "aws-amplify": "^1.2.2",
     "expo": "^34.0.3",
     "expo-asset": "^6.0.0",
@@ -22,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-date-picker": "^2.7.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-navigation": "^3.11.0"
