--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-asset": "^6.0.0",
     "expo-font": "^6.0.1",
     "galio-framework": "^0.6.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
